Finalizado backend de PruebaPlayTech: login, JWT, Docker, SQL y documentación completa

--- a/user_server/src/main/resources/application.yml
+++ b/user_server/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/user_api
-    username: usuario_prueba
-    password: admin123
+    url: jdbc:postgresql://host.docker.internal:5432/user_api
+    username: postgres
+    password: postgres
     driver-class-name: org.postgresql.Driver
 
   jpa:
